--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </properties>
 
   <dependencies>
-    <!-- http://mvnrepository.com/artifact/org.springframework/spring-context -->
+    	<!-- http://mvnrepository.com/artifact/org.springframework/spring-context -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -36,6 +36,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
   </dependencies>
 
   <build>
